add feature createNewGroupExpense